app/assets/tailwind/application.css
/* ... */
.page.prev.disabled {
  @apply ml-0 flex h-full cursor-not-allowed items-center justify-center rounded-l-lg border border-slate-300 bg-slate-50 px-3 py-1.5 text-slate-500 dark:border-slate-700 dark:bg-slate-900 dark:text-slate-400;
}

.page a,
.page.gap {
  @apply hover:text-primary-700 relative inline-flex items-center border border-slate-200 bg-white px-4 py-2 text-sm font-medium text-slate-900 hover:bg-slate-100 focus:z-10 focus:ring-4 focus:ring-slate-200 focus:outline-hidden dark:border-slate-600 dark:bg-slate-800 dark:text-slate-400 dark:hover:bg-slate-700 dark:hover:text-white dark:focus:ring-slate-700;
}

.page.active {
  @apply text-primary-600 bg-primary-50 border-primary-300 hover:bg-primary-100 hover:text-primary-700 z-10 flex items-center justify-center border px-3 py-2 text-sm leading-tight dark:border-slate-700 dark:bg-slate-800 dark:text-white;
}

.pagy-info {
  @apply text-sm font-normal text-slate-500 dark:text-slate-400;
}

div.field_with_errors > :is(select) {
  @apply border-red-700 text-red-900 placeholder-red-300;
}

.table-container table:not(:has(tbody td)) {
  display: none;
}

.table-container:not(:has(td)) .empty_state_message {
  display: block;
}

.table-container .empty_state_message {
  display: none;
}

.fixed-table-component {
  height: calc(100vh - 50px - 32px);
  max-height: calc(100vh - 50px - 32px);
  display: flex;
  flex-direction: column;
}

.scrollbar::-webkit-scrollbar {
  width: 0.75rem;
  height: 0.75rem;
}

.scrollbar::-webkit-scrollbar-thumb {
  --tw-bg-opacity: 1 !important;
  @apply bg-slate-300 dark:bg-slate-600;
  border-radius: 0.25rem;
}

.scrollbar::-webkit-scrollbar-corner {
  display: none;
}

input[type="checkbox"] {
  @apply text-primary-600 checked:border-primary-500 focus:ring-primary-500 dark:checked:border-primary-500 dark:checked:bg-primary-500 mt-0.5 mr-2 shrink-0 rounded-sm border-slate-200 disabled:pointer-events-none disabled:opacity-50 dark:border-neutral-700 dark:bg-neutral-800 dark:focus:ring-offset-slate-800;
}

input[type="radio"] {
  @apply text-primary-600 checked:border-primary-500 focus:ring-primary-500 dark:checked:border-primary-500 dark:checked:bg-primary-500 mt-0.5 shrink-0 rounded-full border-slate-200 disabled:pointer-events-none disabled:opacity-50 dark:border-neutral-700 dark:bg-neutral-800 dark:focus:ring-offset-slate-800;
}

